Fix ALL_SIDES label typo in all locale files

--- a/locales/fr/editor.properties
+++ b/locales/fr/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=Unité de police em
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Tous les côtés
+ALL_SIDES=Tous les côtés
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Chaque côté
 # Heading of the QUICK EDIT UI box used to set padding value
