--- a/locales/ja/editor.properties
+++ b/locales/ja/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=em フォント単位
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=すべてのスライド
+ALL_SIDES=すべてのスライド
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=個別のスライド
 # Heading of the QUICK EDIT UI box used to set padding value
