--- a/locales/ko/editor.properties
+++ b/locales/ko/editor.properties
@@ -213,7 +213,7 @@ EM_UNIT=em 폰트 단위
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=모든 면
+ALL_SIDES=모든 면
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 # Heading of the QUICK EDIT UI box used to set padding value
 # Heading of the QUICK EDIT UI box used to set margin value
