--- a/locales/tr/editor.properties
+++ b/locales/tr/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=em yazı tipi birimi
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Tüm kenarlar
+ALL_SIDES=Tüm kenarlar
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Ayrı ayrı kenarlar
 # Heading of the QUICK EDIT UI box used to set padding value
