--- a/locales/bs/editor.properties
+++ b/locales/bs/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=em jedinica fonta
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Sve strane
+ALL_SIDES=Sve strane
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Pojedine strane
 # Heading of the QUICK EDIT UI box used to set padding value
