--- a/locales/cak/editor.properties
+++ b/locales/cak/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=em xe'el junilal
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Konojel taq Ruchi'
+ALL_SIDES=Konojel taq Ruchi'
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Yonin taq Ruchi'
 # Heading of the QUICK EDIT UI box used to set padding value
