--- a/locales/de/editor.properties
+++ b/locales/de/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=Em-Schriftart-Einheit
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Alle Seiten
+ALL_SIDES=Alle Seiten
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Individuelle Seiten
 # Heading of the QUICK EDIT UI box used to set padding value
