--- a/locales/dsb/editor.properties
+++ b/locales/dsb/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=pismowa jadnotka em
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Wšykne boki
+ALL_SIDES=Wšykne boki
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Indiwiduelne boki
 # Heading of the QUICK EDIT UI box used to set padding value
