--- a/locales/el/editor.properties
+++ b/locales/el/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=μονάδα γραμματοσειράς em
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Όλες οι πλευρές
+ALL_SIDES=Όλες οι πλευρές
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Μεμονωμένες πλευρές
 # Heading of the QUICK EDIT UI box used to set padding value
