--- a/locales/en-US/editor.properties
+++ b/locales/en-US/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=em font unit
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=All Sides
+ALL_SIDES=All Sides
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Individual Sides
 # Heading of the QUICK EDIT UI box used to set padding value
