--- a/locales/es/editor.properties
+++ b/locales/es/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=unidad de fuente em
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Todos los lados
+ALL_SIDES=Todos los lados
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Lados individuales
 # Heading of the QUICK EDIT UI box used to set padding value
