--- a/locales/fy-NL/editor.properties
+++ b/locales/fy-NL/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=em lettertypeformaat
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Alle siden
+ALL_SIDES=Alle siden
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Yndividuele siden
 # Heading of the QUICK EDIT UI box used to set padding value
