--- a/locales/hu/editor.properties
+++ b/locales/hu/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=em betűkészlet egység
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Összes oldal
+ALL_SIDES=Összes oldal
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Egyes oldalak
 # Heading of the QUICK EDIT UI box used to set padding value
