--- a/locales/it/editor.properties
+++ b/locales/it/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=unità em del font
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Tutti i lati
+ALL_SIDES=Tutti i lati
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Lati singoli
 # Heading of the QUICK EDIT UI box used to set padding value
