--- a/locales/ka/editor.properties
+++ b/locales/ka/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=შრიფტის ზომის ერთეული em
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=ყველა მხარე
+ALL_SIDES=ყველა მხარე
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=ცალკეული მხარე
 # Heading of the QUICK EDIT UI box used to set padding value
