--- a/locales/kab/editor.properties
+++ b/locales/kab/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=Tayunt n tsefsit em
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Akk tigratin
+ALL_SIDES=Akk tigratin
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Tigratin tasufin
 # Heading of the QUICK EDIT UI box used to set padding value
