--- a/locales/ms/editor.properties
+++ b/locales/ms/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=unit fon em
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Semua Sisi
+ALL_SIDES=Semua Sisi
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Sisi Individu
 # Heading of the QUICK EDIT UI box used to set padding value
