--- a/locales/nl/editor.properties
+++ b/locales/nl/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=em-lettertype-eenheid
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Alle zijden
+ALL_SIDES=Alle zijden
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Individuele zijden
 # Heading of the QUICK EDIT UI box used to set padding value
