--- a/locales/nn-NO/editor.properties
+++ b/locales/nn-NO/editor.properties
@@ -219,7 +219,7 @@ EM_UNIT=em skrifteining
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Alle sider
+ALL_SIDES=Alle sider
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Individuelle sider
 # Heading of the QUICK EDIT UI box used to set padding value
