--- a/locales/ru/editor.properties
+++ b/locales/ru/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=em единицы шрифта
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Всех слайдов
+ALL_SIDES=Всех слайдов
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Отдельных слайдов
 # Heading of the QUICK EDIT UI box used to set padding value
