--- a/locales/sk/editor.properties
+++ b/locales/sk/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=bodová veľkosť písma
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Všetky stránky
+ALL_SIDES=Všetky stránky
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Jednotlivé stránky
 # Heading of the QUICK EDIT UI box used to set padding value
