--- a/locales/sq/editor.properties
+++ b/locales/sq/editor.properties
@@ -218,7 +218,7 @@ EM_UNIT=njësia em për shkronja
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=Krejt Anët
+ALL_SIDES=Krejt Anët
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=Anë Individuale
 # Heading of the QUICK EDIT UI box used to set padding value
