--- a/locales/zh-TW/editor.properties
+++ b/locales/zh-TW/editor.properties
@@ -220,7 +220,7 @@ EM_UNIT=em 字形單位
 
 # extensions/default/InlinePaddingEditor
 # "All Sides" is an option that can be selected for padding in case when users want to change padding value for all the sides at once
-ALL_SIDE=各側
+ALL_SIDES=各側
 # "Individual Sides" is an option that can be selected for setting the padding value for all the four sides indiviually
 INDIVIDUAL_SIDES=單側
 # Heading of the QUICK EDIT UI box used to set padding value
